--- a/TheBeast/app/build.gradle
+++ b/TheBeast/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.facebook.android:audience-network-sdk:4.6.0'
+    compile 'com.android.support:support-v4:23.1.1'
 }
