--- a/TheBeast/app/src/main/AndroidManifest.xml
+++ b/TheBeast/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"/>
@@ -46,14 +45,17 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
         </activity>
-        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <!--
+             ATTENTION: This was auto-generated to add Google Play services to your project for
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA3Ieo-F9EADRF9lZB91Aw57-rOGcTs8-c"/>
+            android:value="AIzaSyDP7cOiZJi8JevTgce7Co_N_jwTMnaoR7Y"/>
+
     </application>
 
 </manifest>
