Add filtering of game lists/scrolling tabs and small improvements to address checking with bounding box for results.

--- a/TheBeast/app/src/main/AndroidManifest.xml
+++ b/TheBeast/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity
             android:name=".CreateGameActivity"
             android:label="@string/title_activity_create_game"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
